1.  tiny update to controller_04.py file... added File menu and open file option, not implemented yet 2.  found a good vtk/nastran example on the internet, put it in vtk_nastran_example.py

--- a/fem_post/view.ui
+++ b/fem_post/view.ui
@@ -126,6 +126,13 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget">
@@ -159,6 +166,11 @@
     </layout>
    </widget>
   </widget>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open...</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
