--- a/fem_post/view/view.ui
+++ b/fem_post/view/view.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1052</width>
-    <height>854</height>
+    <width>741</width>
+    <height>652</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,7 +62,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1052</width>
+     <width>741</width>
      <height>21</height>
     </rect>
    </property>
@@ -70,7 +70,8 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionOpen"/>
+    <addaction name="action_Open"/>
+    <addaction name="action_Quit"/>
    </widget>
    <widget class="QMenu" name="menu_Group">
     <property name="title">
@@ -86,6 +87,14 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
+    <widget class="QMenu" name="menu_Toolbars">
+     <property name="title">
+      <string>&amp;Toolbars</string>
+     </property>
+     <addaction name="action_View"/>
+     <addaction name="action_Picking"/>
+    </widget>
+    <addaction name="menu_Toolbars"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menu_Group"/>
@@ -93,40 +102,6 @@
    <addaction name="menu_View"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QDockWidget" name="dock_msg">
-   <property name="windowTitle">
-    <string>Messages</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>8</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QGridLayout" name="gridLayout_3">
-     <item row="0" column="0">
-      <widget class="QPlainTextEdit" name="txt_msg">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>120</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>120</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-  </widget>
   <widget class="QToolBar" name="tbar_grp">
    <property name="windowTitle">
     <string>Grouping Toolbar</string>
@@ -144,8 +119,8 @@
     <bool>false</bool>
    </attribute>
    <addaction name="action_GRP1"/>
-   <addaction name="actionGRP2"/>
-   <addaction name="actionGRP3"/>
+   <addaction name="action_GRP2"/>
+   <addaction name="action_GRP3"/>
   </widget>
   <widget class="QToolBar" name="tbar_1">
    <property name="windowTitle">
@@ -172,508 +147,6 @@
    <addaction name="action_A1"/>
    <addaction name="action_A2"/>
    <addaction name="action_A3"/>
-  </widget>
-  <widget class="QDockWidget" name="dock_view1">
-   <property name="windowTitle">
-    <string>View 1</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_2">
-    <layout class="QGridLayout" name="gridLayout_5">
-     <item row="4" column="0">
-      <widget class="QPushButton" name="btn_switch">
-       <property name="toolTip">
-        <string>Switch Background for Printing</string>
-       </property>
-       <property name="text">
-        <string>Switch</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="btn_bgcolor2">
-       <property name="text">
-        <string>BG 2 Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="btn_edgecolor">
-       <property name="text">
-        <string>Edge Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="5" column="0">
-      <widget class="QPushButton" name="btn_perspectivetoggle">
-       <property name="text">
-        <string>Toggle Pers.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="btn_bgcolor1">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>BG 1 Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="btn_nofillededge">
-       <property name="text">
-        <string>No Filled Edge</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QPushButton" name="btn_elementcolor">
-       <property name="text">
-        <string>Element Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QPushButton" name="btn_togglewire">
-       <property name="text">
-        <string>Toggle Wire</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0">
-      <widget class="QPushButton" name="btn_saveimg">
-       <property name="text">
-        <string>Save IMG</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="dock_picking">
-   <property name="windowTitle">
-    <string>Picking</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>2</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_3">
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="0">
-      <widget class="QPushButton" name="box_pick_button">
-       <property name="text">
-        <string>Box Pick</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QPushButton" name="points_button">
-       <property name="text">
-        <string>Points</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QPushButton" name="bars_button">
-       <property name="text">
-        <string>Bars</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="single_pick_button">
-       <property name="text">
-        <string>Single Pick</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <widget class="QPushButton" name="toggle_hidden_button">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Toggle Hidden</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QPushButton" name="remove_selection_button">
-       <property name="text">
-        <string>Remove</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QPushButton" name="tris_button">
-       <property name="text">
-        <string>Tris</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="any_button">
-       <property name="text">
-        <string>Any</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="nodes_button">
-       <property name="text">
-        <string>Nodes</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="2">
-      <widget class="QLineEdit" name="selection_box"/>
-     </item>
-     <item row="5" column="0">
-      <widget class="QPushButton" name="replace_selection_button">
-       <property name="text">
-        <string>Replace</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QPushButton" name="append_selection_button">
-       <property name="text">
-        <string>Append</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QPushButton" name="elements_button">
-       <property name="text">
-        <string>Elements</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="poly_pick_button">
-       <property name="text">
-        <string>Poly Pick</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QPushButton" name="quads_button">
-       <property name="text">
-        <string>Quads</string>
-       </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>false</bool>
-       </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="0">
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QLabel" name="label">
-           <property name="minimumSize">
-            <size>
-             <width>71</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Left-Click</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="left_click_combo">
-           <property name="minimumSize">
-            <size>
-             <width>69</width>
-             <height>22</height>
-            </size>
-           </property>
-           <item>
-            <property name="text">
-             <string>Rotate</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Pan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Zoom</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <widget class="QLabel" name="label_2">
-           <property name="minimumSize">
-            <size>
-             <width>71</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Middle-Click</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="middle_click_combo">
-           <property name="minimumSize">
-            <size>
-             <width>69</width>
-             <height>22</height>
-            </size>
-           </property>
-           <item>
-            <property name="text">
-             <string>Rotate</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Pan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Zoom</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <item>
-          <widget class="QLabel" name="label_3">
-           <property name="minimumSize">
-            <size>
-             <width>71</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Right-Click</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="right_click_combo">
-           <property name="minimumSize">
-            <size>
-             <width>69</width>
-             <height>22</height>
-            </size>
-           </property>
-           <item>
-            <property name="text">
-             <string>Rotate</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Pan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Zoom</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
-         <item>
-          <widget class="QLabel" name="label_4">
-           <property name="minimumSize">
-            <size>
-             <width>71</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Ctrl-Left-Click</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="ctrl_left_click_combo">
-           <property name="minimumSize">
-            <size>
-             <width>69</width>
-             <height>22</height>
-            </size>
-           </property>
-           <item>
-            <property name="text">
-             <string>Rotate</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Pan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Zoom</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="toggle_view_button">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Toggle View</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
   </widget>
   <action name="action_A1">
    <property name="checkable">
@@ -710,19 +183,37 @@
     <string>&amp;GRP1</string>
    </property>
   </action>
-  <action name="actionGRP2">
+  <action name="action_GRP2">
    <property name="text">
     <string>GRP2</string>
    </property>
   </action>
-  <action name="actionGRP3">
+  <action name="action_GRP3">
    <property name="text">
     <string>GRP3</string>
    </property>
   </action>
-  <action name="actionOpen">
+  <action name="action_Open">
    <property name="text">
     <string>&amp;Open...</string>
+   </property>
+  </action>
+  <action name="action_View">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;View</string>
+   </property>
+  </action>
+  <action name="action_Picking">
+   <property name="text">
+    <string>&amp;Picking</string>
+   </property>
+  </action>
+  <action name="action_Quit">
+   <property name="text">
+    <string>&amp;Quit</string>
    </property>
   </action>
  </widget>
