--- a/fem_post/view/docks/dockui_view.ui
+++ b/fem_post/view/docks/dockui_view.ui
@@ -99,7 +99,7 @@
     <item row="0" column="0">
      <widget class="QPushButton" name="btn_bgcolor1">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
